@@ -14,10 +14,10 @@ index c972b3bc0b..18b5a6ee4f 100644
  # TODO we should fix the long-line errors in yacc/*.c
  /yacc/*.[ch]         typo.very-long-line=may
 diff --git a/Changes b/Changes
-index 8f1883af12..ae9e56860c 100644
+index 21e4f67167..db0ac93754 100644
 --- a/Changes
 +++ b/Changes
-@@ -756,11 +756,6 @@ OCaml 5.0
+@@ -759,11 +759,6 @@ OCaml 5.0
    (Damien Doligez, report by Thierry Martinez and Vincent Laviron, review by
     Xavier Leroy)
  
@@ -29,7 +29,7 @@ index 8f1883af12..ae9e56860c 100644
  - #11516, #11524: Fix the `deprecated_mutable` attribute.
    (Chris Casinghino, review by Nicolás Ojeda Bär and Florian Angeletti)
  
-@@ -784,6 +779,26 @@ OCaml 5.0
+@@ -787,6 +782,26 @@ OCaml 5.0
    multiple threads.
    (Marc Lasson, Nicolás Ojeda Bär, review by Gabriel Scherer and David Allsopp)
  
@@ -56,7 +56,7 @@ index 8f1883af12..ae9e56860c 100644
  OCaml 4.14.0 (28 March 2022)
  ----------------------------
  
-@@ -819,13 +834,13 @@ OCaml 4.14.0 (28 March 2022)
+@@ -822,13 +837,13 @@ OCaml 4.14.0 (28 March 2022)
  - #10549: Stack overflow detection and naked pointers checking for ARM64
    (Xavier Leroy, review by Stephen Dolan)
  
@@ -72,7 +72,7 @@ index 8f1883af12..ae9e56860c 100644
     code or an OCaml thread stops
    (Xavier Leroy, review by David Allsopp and Damien Doligez)
  
-@@ -932,6 +947,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -935,6 +950,9 @@ OCaml 4.14.0 (28 March 2022)
  - #10464: Add List.is_empty.
    (Craig Ferguson, review by David Allsopp)
  
@@ -82,7 +82,7 @@ index 8f1883af12..ae9e56860c 100644
  ### Other libraries:
  
  - #10192: Add support for Unix domain sockets on Windows and use them
-@@ -1191,6 +1209,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -1194,6 +1212,9 @@ OCaml 4.14.0 (28 March 2022)
  
  ### Build system:
  
@@ -10078,7 +10078,7 @@ index 0000000000..ab993447c2
 +     fi
 diff --git a/diff-against-trunk-system.diff b/diff-against-trunk-system.diff
 new file mode 100644
-index 0000000000..3053c11756
+index 0000000000..31b9b9a792
 --- /dev/null
 +++ b/diff-against-trunk-system.diff
 @@ -0,0 +1,10007 @@
@@ -10098,10 +10098,10 @@ index 0000000000..3053c11756
 + # TODO we should fix the long-line errors in yacc/*.c
 + /yacc/*.[ch]         typo.very-long-line=may
 +diff --git a/Changes b/Changes
-+index 8f1883af12..ae9e56860c 100644
++index 21e4f67167..db0ac93754 100644
 +--- a/Changes
 ++++ b/Changes
-+@@ -756,11 +756,6 @@ OCaml 5.0
++@@ -759,11 +759,6 @@ OCaml 5.0
 +   (Damien Doligez, report by Thierry Martinez and Vincent Laviron, review by
 +    Xavier Leroy)
 + 
@@ -10113,7 +10113,7 @@ index 0000000000..3053c11756
 + - #11516, #11524: Fix the `deprecated_mutable` attribute.
 +   (Chris Casinghino, review by Nicolás Ojeda Bär and Florian Angeletti)
 + 
-+@@ -784,6 +779,26 @@ OCaml 5.0
++@@ -787,6 +782,26 @@ OCaml 5.0
 +   multiple threads.
 +   (Marc Lasson, Nicolás Ojeda Bär, review by Gabriel Scherer and David Allsopp)
 + 
@@ -10140,7 +10140,7 @@ index 0000000000..3053c11756
 + OCaml 4.14.0 (28 March 2022)
 + ----------------------------
 + 
-+@@ -819,13 +834,13 @@ OCaml 4.14.0 (28 March 2022)
++@@ -822,13 +837,13 @@ OCaml 4.14.0 (28 March 2022)
 + - #10549: Stack overflow detection and naked pointers checking for ARM64
 +   (Xavier Leroy, review by Stephen Dolan)
 + 
@@ -10156,7 +10156,7 @@ index 0000000000..3053c11756
 +    code or an OCaml thread stops
 +   (Xavier Leroy, review by David Allsopp and Damien Doligez)
 + 
-+@@ -932,6 +947,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -935,6 +950,9 @@ OCaml 4.14.0 (28 March 2022)
 + - #10464: Add List.is_empty.
 +   (Craig Ferguson, review by David Allsopp)
 + 
@@ -10166,7 +10166,7 @@ index 0000000000..3053c11756
 + ### Other libraries:
 + 
 + - #10192: Add support for Unix domain sockets on Windows and use them
-+@@ -1191,6 +1209,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -1194,6 +1212,9 @@ OCaml 4.14.0 (28 March 2022)
 + 
 + ### Build system:
 + 
